testdata/baselines/reference/submodule/compiler/moduleResolutionWithSuffixes_one_jsonModule.errors.txt
/index.ts(1,17): error TS2307: Cannot find module './foo.json' or its corresponding type declarations.


==== /tsconfig.json (0 errors) ====
    {
    	"compilerOptions": {
    		"esModuleInterop": true,
    		"resolveJsonModule": true,
    		"outDir": "bin",
    		"moduleResolution": "node",
    		"traceResolution": true,
    		"moduleSuffixes": [".ios"]
    	}
    }
    
==== /index.ts (1 errors) ====
    import foo from "./foo.json";
                    ~~~~~~~~~~~~
!!! error TS2307: Cannot find module './foo.json' or its corresponding type declarations.
    console.log(foo.ios);
==== /foo.ios.json (0 errors) ====
    {
    	"ios": "platform ios"
    }
==== /foo.json (0 errors) ====
    {
    	"base": "platform base"
    }
    